<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:id="@+id/dLoginScreen">

    <LinearLayout
        android:id="@+id/dLoginLlPass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dLoginLlUser"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="126dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dLoginLbPassword"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_weight="1"
            android:text="@string/lbPasswordLoginDialog"
            android:textColor="@android:color/background_dark" />

        <EditText
            android:id="@+id/dLoginTxtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txtPasswordLoginDialog"
            android:inputType="textPassword"
            android:autofillHints="" />

    </LinearLayout>

    <TextView
        android:id="@+id/dLoginLbTitle"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:text="@string/lbTitleLoginDialog"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/dLoginLlUser"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/dLoginLbTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dLoginLbUsername"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:text="@string/lbUsernameLoginDialog"
            android:textColor="@android:color/background_dark"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/dLoginTxtUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txtUsernameLoginDialog"
            android:inputType="textPersonName"
            android:autofillHints="" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/dLoginCbxRemember"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="83dp"
        android:text="@string/cbxRememberLoginDialog" />

    <Button
        android:id="@+id/dLoginBtnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/dLoginLbTitle"
        android:layout_marginBottom="20dp"
        android:text="@string/btnLoginLoginDialog" />

    <Button
        android:id="@+id/dLoginBtnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/dLoginLbTitle"
        android:layout_alignTop="@+id/dLoginBtnLogin"
        android:text="@string/btnRegisterLoginDialog" />

</RelativeLayout>
