<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/aptItemRoomImgPlayer"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:contentDescription="@string/imgPlayerRoomBattleActivity"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/aptItemRoomTxtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="6"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/aptItemRoomImgBattle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:contentDescription="@string/imgBattleRoomBattleActivity"
        app:srcCompat="@drawable/project_battle" />

    <ImageView
        android:id="@+id/aptItemRoomImgAvai"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:contentDescription="@string/imgAvaiRoomBattleActivity"
        app:srcCompat="@drawable/project_offline" />
</LinearLayout>