<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dInviteScreen">


    <ImageView
        android:id="@+id/dInviteImgLoad"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:contentDescription="@string/imgLoadInviteDialog"
        app:srcCompat="@drawable/ic_project_loading" />

    <TextView
        android:id="@+id/dInvitedLbTitle"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="14dp"
        android:text="@string/lbTitleInviteDialog"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/dInviteBtnCancel"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="97dp"
        android:layout_marginBottom="20dp"
        android:text="@string/btnCancelInviteDialog"
        android:textAllCaps="false" />

</RelativeLayout>