<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dInviteScreen">


    <ImageView
        android:id="@+id/dInvitedImgLoad"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:contentDescription="@string/imgLoadInvitedDialog"
        app:srcCompat="@drawable/ic_project_loading" />

    <TextView
        android:id="@+id/dInvitedLbTitle"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="14dp"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/dInvitedBtnRefuse"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/dInvitedLbTitle"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="97dp"
        android:layout_marginBottom="20dp"
        android:text="@string/btnRefuseInvitedDialog"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/dInvitedBtnAccept"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/dInvitedLbTitle"
        android:layout_alignBottom="@+id/dInvitedBtnRefuse"
        android:layout_marginEnd="30dp"
        android:text="@string/btnAcceptInvitedDialog"
        android:textAllCaps="false" />

</RelativeLayout>